<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#956B95C3"
    android:supportsRtl="true"
    tools:ignore="RtlEnabled"
    tools:context=".view.SignInFragment">

    <LinearLayout

        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_for_connect"
        android:elevation="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <!-- text field for email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edt_user_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/login_email"
            android:padding="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_-@."
                android:inputType="textFilter|textVisiblePassword|textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- text field for password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edt_user_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/login_password"
            android:padding="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_BTN_create_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#6B95C3"

            android:padding="10dp"
            android:shadowRadius="2"
            android:text="@string/signup_title_button"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:strokeColor="@color/transparent"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="170dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_TVW_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:clickable="true"
                android:text="@string/signup_text_view_button"
                android:textColor="#6B95C3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>