<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_page_all_details"

            android:layout_width="642dp"
            android:layout_height="300dp"
            android:layout_gravity="right"
            android:layout_marginTop="108dp"
            android:background="@drawable/corner_card"
            app:cardElevation="10dp"
            android:elevation="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_header_how_we_can_help_you"
                    android:textStyle="bold"
                    android:elevation="10dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/chat_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/radio_button_background"
                        android:elevation="10dp"

                        android:layoutDirection="rtl"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/chat_support"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/chat_misguided_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="right"
                        android:background="@drawable/radio_button_background"
                        android:layoutDirection="rtl"

                        android:onClick="onRadioButtonClicked"
                        android:text="@string/chat_misguided_report"

                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/chat_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="right"
                        android:background="@drawable/radio_button_background"
                        android:layoutDirection="rtl"
                        android:onClick="onRadioButtonClicked"

                        android:text="@string/chat_other"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_content_report"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"

            android:textSize="30sp"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="1000dp"
            android:layout_height="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"

            android:background="@drawable/rectangle_1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_event_BTN_save"
            android:shadowRadius="2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="40dp"
            android:text="@string/save"
            app:strokeWidth="2dp"
            style="@style/MyButton"
            android:textColor="#3A8DEC"
            app:strokeColor="#3A8DEC"
            android:textSize="20dp"
            android:textStyle="bold" />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>