<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F6B95C3"
    android:supportsRtl="true"
    tools:ignore="RtlEnabled"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">



    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:background="@drawable/login_background"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="710dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:layout_gravity="center"

            tools:ignore="MissingConstraints">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_create_account"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />


            <!-- text field for email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_edt_user_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="400dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:layout_gravity="center"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_-@."
                    android:inputType="textFilter|textVisiblePassword|textNoSuggestions|textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- text field for password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_edt_user_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="400dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_gravity="center"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="160dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signup_EDT_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="130dp"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/color_for_login_fields"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_remember_me_check_box"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/signup_CBX_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />
                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_BTN_create_account"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"

                android:layout_marginTop="20dp"

                android:backgroundTint="#6B95C3"
                android:shadowRadius="2"
                android:elevation="10dp"

                android:text="@string/login_create_account"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:strokeColor="@color/transparent"
                app:strokeWidth="2dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="170dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signup_TVW_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:text="@string/login_text_view_button"
                    android:textColor="#6B95C3"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_already_sign_up"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
</ScrollView>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>