<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/report_card_background"
        android:backgroundTint="@color/transparent"
        android:elevation="50dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/content_report_IMG_image_report"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_news_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/report_page_created_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="dd-mm-yyyy" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/report_page_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category" />


            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/report_page_report_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/report_header"
                android:layout_marginEnd="4dp"
                android:textSize="23sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/report_page_content_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"

                android:text="@string/content_event"


                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/report_page_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"

                    android:text="@string/name"

                    android:textAlignment="viewStart"
                    android:textSize="15sp"


                    />

                <FrameLayout
                    android:id="@+id/profile_FRM_nav"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/report_page_IMG_user"
                        android:layout_width="25dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="4dp"

                        android:layout_marginBottom="5dp"
                        android:focusable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_user"
                        app:civ_border_color="@color/stroke_color_for_profile"
                        app:civ_border_width="2dp" />
                </FrameLayout>


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>